--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,52 @@
+body h1 {
+  text-align: center;
+  font-size: 60px;
+  padding: 40px 0;
+  height: 400px;
+  line-height: 400px;
+}
+body .footer {
+  color: #999;
+  text-align: right;
+}
+body img.center {
+  padding: 40px 0;
+  max-width: 780px;
+}
+body .well {
+  display: block;
+  width: 900px;
+  height: 700px;
+  padding: 40px 60px;
+  background-color: #FFF;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  color: #666;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  letter-spacing: -1px;
+}
+body h4 {
+  font-size: 80%;
+  color: #999;
+}
+body h2 {
+  font-size: 46px;
+  padding: 30px 0;
+}
+body hr {
+  color: #999;
+}
+body ul {
+  padding-left: 30px;
+}
+body ul li {
+  padding: 20px 10px;
+  list-style: disc;
+}
 /*
     So you like the style of impress.js demo?
     Or maybe you are just curious how it was done?
